fix: fixed spacing in accounts currency menu

--- a/src/sass/variantcss/_userDetails.scss
+++ b/src/sass/variantcss/_userDetails.scss
@@ -10,7 +10,7 @@
 }
 
 .account-currency-menu-box > .panel > .panel-body{
-  padding: 0 10px!important;
+  padding: 0 10px 15px 10px!important;
 }
 
 .account-currency-code{
